# caldav-mcp

./: .env.e2e.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_QUALITY.md  CURSOR_SETUP.md  Makefile  PROVIDER_NOTES.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  SKILL.md  TEST_COVERAGE.md  USAGE.md  pyproject.toml  pytest.ini
src/mcp_caldav/: __init__.py  client.py  server.py
tests/: __init__.py  conftest.py  test_client.py  test_server.py  test_server_update_event.py  test_update_event.py
tests/e2e/: .env.e2e.providers.example  README.md  __init__.py  conftest.py  test_client_e2e.py  test_providers_e2e.py
