[project]
name = "mcp-caldav"
version = "0.1.0"
description = "MCP server for CalDAV protocol - universal calendar integration for any CalDAV-compatible server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "caldav>=1.3.7",
    "mcp>=1.3.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "pydantic>=2.10.6",
]

[project.scripts]
mcp-caldav = "mcp_caldav:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "uv>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mcp[cli]>=1.3.0",
]

